fix z-index

--- a/src/assets/styles/components/PlayerModal.scss
+++ b/src/assets/styles/components/PlayerModal.scss
@@ -1,5 +1,5 @@
 .player-modal {
-  z-index: 21;
+  z-index: 22;
   position: absolute;
   display: flex;
   flex-direction: column;
